--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 
     <a href="https://github.com/yujuangithub">Github </a>
 
+    <a href="/view/myPro">Projects</a>
+
     <a href="/view/about">Contact me</a>
 
 </nav>
